--- a/Bayesian Semantic Segmentation.ipynb
+++ b/Bayesian Semantic Segmentation.ipynb
@@ -129,6 +129,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title1](img/boxs_loop.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "nbpresent": {
      "id": "0d2e912a-814e-4049-abc9-ad25ad0040ae"
@@ -343,16 +350,13 @@
     "imbalance and produce well calibrated predictions and model uncertainty. Inference though\n",
     "stochastic methods will be interesting as we encounter convergence issues and hyperparameter\n",
     "tuning. Criticism is the most interesting part of our analysis for a computer vision task as we as\n",
-    "humans can easily judge whether the prediction uncertainties make sense.\n",
-    "The following figure summarizes Box’s loop for our project in a succinct manner"
+    "humans can easily judge whether the prediction uncertainties make sense."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "![title1](img/boxs_loop.png)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -428,7 +432,8 @@
     "    net = net + conv1_b\n",
     "    net = tf.contrib.layers.batch_norm(net, is_training=is_training, decay=0.99)\n",
     "    net = tf.nn.relu(net)\n",
-    "    net, arg1 = tf.nn.max_pool_with_argmax(net, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
+    "    net, arg1 = tf.nn.max_pool_with_argmax(net, ksize=[1, 2, 2, 1], \n",
+    "                                           strides=[1, 2, 2, 1], padding='SAME')\n",
     "\n",
     "    \n",
     "    conv2_w = StudentT(loc=tf.zeros([3,3,64,128]), scale=tf.ones([3,3,64,128]),df=1.0)\n",
@@ -437,7 +442,8 @@
     "    net = net + conv2_b\n",
     "    net = tf.contrib.layers.batch_norm(net, is_training=is_training, decay=0.99)\n",
     "    net = tf.nn.relu(net)\n",
-    "    net, arg2 = tf.nn.max_pool_with_argmax(net, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
+    "    net, arg2 = tf.nn.max_pool_with_argmax(net, ksize=[1, 2, 2, 1], \n",
+    "                                           strides=[1, 2, 2, 1], padding='SAME')\n",
     "    \n",
     "    conv3_w = StudentT(loc=tf.zeros([3,3,128,256]), scale=tf.ones([3,3,128,256]),df=1.0)\n",
     "    conv3_b = StudentT(loc=tf.zeros([256]), scale=tf.ones([256]),df=1.0)\n",
@@ -445,7 +451,8 @@
     "    net = net + conv3_b\n",
     "    net = tf.contrib.layers.batch_norm(net, is_training=is_training, decay=0.99)\n",
     "    net = tf.nn.relu(net)\n",
-    "    net, arg3 = tf.nn.max_pool_with_argmax(net, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
+    "    net, arg3 = tf.nn.max_pool_with_argmax(net, ksize=[1, 2, 2, 1],\n",
+    "                                           strides=[1, 2, 2, 1], padding='SAME')\n",
     "\n",
     "    net = unpool_with_argmax(net, arg3, name='maxunpool_arg3')\n",
     "    conv3r_w = StudentT(loc=tf.zeros([3,3,256,128]), scale=tf.ones([3,3,256,128]),df=1.0)\n",
@@ -464,12 +471,11 @@
     "    net = tf.nn.relu(net)\n",
     "    \n",
     "    net = unpool_with_argmax(net, arg1, name='maxunpool_arg1')\n",
-    "    conv1r_w = StudentT(loc=tf.zeros([3,3,64,NUM_CLASSES]), scale=tf.ones([3,3,64,NUM_CLASSES]),df=1.0)\n",
+    "    conv1r_w = StudentT(loc=tf.zeros([3,3,64,NUM_CLASSES]), \n",
+    "                        scale=tf.ones([3,3,64,NUM_CLASSES]),df=1.0)\n",
     "    conv1r_b = StudentT(loc=tf.zeros([NUM_CLASSES]), scale=tf.ones([NUM_CLASSES]),df=1.0)\n",
     "    net = tf.nn.conv2d(net,conv1r_w, strides=[1,1,1,1], padding='SAME')\n",
     "    net = net + conv1r_b\n",
-    "    #net = tf.contrib.layers.batch_norm(net, is_training=is_training, decay=0.99)\n",
-    "    #net = tf.nn.relu(net)\n",
     "    \n",
     "    predicted_mask = Categorical(logits=net)\n",
     "    \n",
@@ -536,11 +542,12 @@
    "source": [
     "Our inference procedure uses BBVI to approximate the posterior distribution of the latent parameters, namely the weights and biases on the convolutional layers. The actual procedure is the following:\n",
     "\n",
-    "    1. In edward, create a KLQP object using the latent variables\n",
+    "    1. In edward, create a KLQP object using the latent variables. Provide number of iters, number of latent variable samples, and scale the samples by N/M so it's as if the algorithm sees N/M training examples per iteration. N is the Number of Training Examples, M is the Batch Size. \n",
     "    2. Initialize all edward/tf variables including tf iterators\n",
     "    3. Get train_image/train_label \"pairs\" for batch \n",
-    "    4. Use batch data to run one update instance of KLQP object\n",
-    "    5. Track loss\n"
+    "    4. Run variational inference with the Kullback-Leibler divergence. We use 5 latent variable samples for computing  black box stochastic gradients in the algorithm\n",
+    "    5. Track loss\n",
+    "\n"
    ]
   },
   {
@@ -600,7 +607,9 @@
     "            if len(train_image) < TRAIN_BATCH_SIZE:\n",
     "                sess.run(train_iterator.initializer)\n",
     "                train_image, train_labels =sess.run(train_iterator.get_next())\n",
-    "            info_dict = inference.update({inputs: train_image, labels: train_labels, is_training: True})\n",
+    "            info_dict = inference.update({inputs: train_image, \n",
+    "                                          labels: train_labels, \n",
+    "                                          is_training: True})\n",
     "            inference.print_progress(info_dict)\n",
     "            loss.append(info_dict['loss'])\n",
     "        saver.save(sess, session_dir)\n",
@@ -644,6 +653,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -672,7 +686,7 @@
     }
    ],
    "source": [
-    "inference(predicted_mask, latent_dict, labels, session_dir='checkpoints/checkpoint_T_200',restore_sess=True)"
+    "inference(predicted_mask, latent_dict, labels, session_dir='checkpoints/checkpoint_T_225',restore_sess=True)"
    ]
   },
   {
@@ -771,7 +785,9 @@
     "            print(idx)\n",
     "            fig, ax = plt.subplots(1,3,figsize=(10,12))\n",
     "            for j in range(ppc_nsamples):\n",
-    "                bayes_visualize_image_annot(images[idx], labels[idx],ppc[j,idx],ax, n_samples=ppc_nsamples)\n",
+    "                bayes_visualize_image_annot(images[idx],\n",
+    "                                            labels[idx],ppc[j,idx],ax,\n",
+    "                                            n_samples=ppc_nsamples)\n",
     "            plot_uncertainity_from_posterior(ppc,idx,ppc_nsamples)\n",
     "        else:\n",
     "            for idx in range(TRAIN_BATCH_SIZE):\n",
@@ -811,21 +827,27 @@
     "            print(idx)\n",
     "            fig, ax = plt.subplots(1,3,figsize=(10,12))\n",
     "            for j in range(ppc_nsamples):\n",
-    "                bayes_visualize_image_annot(images[idx], labels[idx],ppc[j,idx],ax, n_samples=ppc_nsamples)\n",
+    "                bayes_visualize_image_annot(images[idx],labels[idx],\n",
+    "                                            ppc[j,idx],ax, \n",
+    "                                            n_samples=ppc_nsamples)\n",
     "            plot_uncertainity_from_posterior(ppc,idx,ppc_nsamples)\n",
     "        else:\n",
     "            if len(idx_to_show) == 0:                \n",
     "                for idx in range(TRAIN_BATCH_SIZE):\n",
     "                    fig, ax = plt.subplots(1,3,figsize=(10,12))\n",
     "                    for j in range(ppc_nsamples):\n",
-    "                        bayes_visualize_image_annot(images[idx], labels[idx],ppc[j,idx],ax, n_samples=ppc_nsamples)\n",
+    "                        bayes_visualize_image_annot(images[idx],labels[idx],\n",
+    "                                                    ppc[j,idx],ax,\n",
+    "                                                    n_samples=ppc_nsamples)\n",
     "                    plot_uncertainity_from_posterior(ppc,idx,ppc_nsamples)\n",
     "            else:\n",
     "                for idx in idx_to_show:\n",
     "                    print('picture {}'.format(idx))\n",
     "                    fig, ax = plt.subplots(1,3,figsize=(20,15))\n",
     "                    for j in range(ppc_nsamples):\n",
-    "                        bayes_visualize_image_annot(images[idx], labels[idx],ppc[j,idx],ax, n_samples=ppc_nsamples)\n",
+    "                        bayes_visualize_image_annot(images[idx],labels[idx],\n",
+    "                                                    ppc[j,idx],ax,\n",
+    "                                                    n_samples=ppc_nsamples)\n",
     "                    plot_uncertainity_from_posterior(ppc,idx,ppc_nsamples)\n",
     "\n",
     "        if plot_one_batch_only:\n",
