Clean up comments, Boxs Loop, Inference

--- a/Bayesian Semantic Segmentation.ipynb
+++ b/Bayesian Semantic Segmentation.ipynb
@@ -131,6 +131,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Box's Loop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![title1](img/boxs_loop.png)"
    ]
   },
@@ -793,7 +800,9 @@
     "            for idx in range(TRAIN_BATCH_SIZE):\n",
     "                fig, ax = plt.subplots(1,3,figsize=(10,12))\n",
     "                for j in range(ppc_nsamples):\n",
-    "                    bayes_visualize_image_annot(images[idx], labels[idx],ppc[j,idx],ax, n_samples=ppc_nsamples)\n",
+    "                    bayes_visualize_image_annot(images[idx], labels[idx],\n",
+    "                                                ppc[j,idx],ax,\n",
+    "                                                n_samples=ppc_nsamples)\n",
     "                plot_uncertainity_from_posterior(ppc,idx,ppc_nsamples)\n",
     "        if plot_one_batch_only:\n",
     "            break"
