Add model latex

--- a/Bayesian Semantic Segmentation.ipynb
+++ b/Bayesian Semantic Segmentation.ipynb
@@ -204,6 +204,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": true,
     "nbpresent": {
      "id": "f6f74806-7037-4507-9a54-de802c79e4ac"
     }
@@ -309,6 +310,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "collapsed": true,
     "nbpresent": {
      "id": "400700a1-400f-48c6-9aa9-020be884d062"
     }
@@ -363,7 +365,24 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Bayesian Segmentation Model\n",
+    "\n",
+    "Consider dataset of images and associated segment $\\{(x_i, y_i)\\}$ where $x_i \\in \\mathbb{R}^{72*96*3}$ and $y_i \\in \\{0,1,2..11\\}^{72*96}$. $x_i$ is a 3 channel RGB image of dimensions 72x96x3 while $y_i$ is an integer bewteen 0 and 11 denoting the pixel wise class labels of dimensions 72x96\n",
+    "\n",
+    "The model is given by\n",
+    "\n",
+    "$ p(y_i | x_i, w) \\sim Categorical(logits=CNN(x_i;w))$\n",
+    "\n",
+    "where w are the convolutional weights for all layers defined in the convolutional neural network architecture\n",
+    "\n",
+    "$ p(w) \\sim StudentT(loc=0, scale=1, dof=1) $\n",
+    "\n",
+    "The parameters of this model will be estimated with an Normal approximating distribution (see Inference section below)\n",
+    "\n",
+    "\n",
+    "The architecture of CNN is provided below"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -373,7 +392,6 @@
     }
    },
    "source": [
-    "$segment_{ij} \\sim Categorical(logits=NN) $\n",
     "\n",
     "### Figure 3 Convolutional Net Structure"
    ]
@@ -585,6 +603,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "collapsed": true,
     "nbpresent": {
      "id": "e726384d-2b55-4b42-ba9c-28ef228bd4bb"
     }
@@ -700,6 +719,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "collapsed": true,
     "nbpresent": {
      "id": "4bea5d10-9968-42f0-9663-ef8173b6a3c8"
     }
@@ -1036,7 +1056,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   },
   "nbpresent": {
    "slides": {},
