--- a/Bayesian Semantic Segmentation.ipynb
+++ b/Bayesian Semantic Segmentation.ipynb
@@ -192,15 +192,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "nbpresent": {
-     "id": "ae847a8b-4a65-4835-81a5-2ff009351d69"
-    }
-   },
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -570,7 +561,7 @@
     "    1. In edward, create a KLQP object using the latent variables. Provide number of iters, number of latent variable samples, and scale the samples by N/M so it's as if the algorithm sees N/M training examples per iteration. N is the Number of Training Examples, M is the Batch Size. \n",
     "    2. Initialize all edward/tf variables including tf iterators\n",
     "    3. Get train_image/train_label \"pairs\" for batch \n",
-    "    4. Run variational inference with the Kullback-Leibler divergence. We use 5 latent variable samples for computing  black box stochastic gradients in the algorithm\n",
+    "    4. Run variational inference with the Kullback-Leibler divergence (KLQP). The P distribution is a Student T as discussed before, the Q distribution is a Normal. We use 5 latent variable samples for computing  black box stochastic gradients in the algorithm\n",
     "    5. Track loss\n",
     "\n"
    ]
@@ -712,7 +703,7 @@
     }
    ],
    "source": [
-    "inference(predicted_mask, latent_dict, labels, session_dir='checkpoints/checkpoint_T_225',restore_sess=True)"
+    "inference(predicted_mask, latent_dict, labels, session_dir='checkpoints/new_checkpoint',restore_sess=False)"
    ]
   },
   {
@@ -757,9 +748,9 @@
     "    3.) The top right image is the true segmentation\n",
     "    4.) The bottom image is our uncertainity heatmap \n",
     "\n",
-    "As we can see from this example our model (top center) fails to predict the cyclist which can be seen in the original image and in the true segmentation (top right) as the light blue outline. However one thing to note is that the region containing the cyclist in the true segmentation, around 15-20 on the x axis and 30-70 on the y axis, has a high level of uncertainity in our heatmap. Meaning that our model is quite unsure about that region in particular and is quantifying its uncertainity which is exactly what we want.\n",
+    "As we can see from this example our model (top center) fails to predict the cyclist which can be seen in the original image and in the true segmentation (top right) as the light blue outline. However one thing to note is that the region containing the cyclist in the true segmentation, around 15-20 on the x-axis and 30-70 on the y-axis, has a high level of uncertainity in our heatmap. Meaning that our model is quite unsure about that region in particular and is quantifying its uncertainity which is exactly what we want.\n",
     "\n",
-    "Another noteworthy finding is that in the true segmentation  around 75 on the x axis and 20 on the y axis we have a tree in front of a building. In the labeled true segementation there is some arbitrary distinction between where the tree ends and the building begins with the labeler just marking the whole area as a tree. In our segmentation there is a blending of sorts between the two as if you look in the original image it's possible to see both the tree and the bulding at the same time. Lastly, the uncertainity heat map in that region we have high levels of uncertainity as it's unsure of whether to classify it as a building or a tree."
+    "Another noteworthy finding is that in the true segmentation  around 75 on the x-axis and 20 on the y-axis we have a tree in front of a building. In the labeled true segementation there is some arbitrary distinction between where the tree ends and the building begins with the labeler just marking the whole area as a tree. In our segmentation there is a blending of sorts between the two as if you look in the original image it's possible to see both the tree and the bulding at the same time. Lastly, the uncertainity heat map in that region we have high levels of uncertainity as it's unsure of whether to classify it as a building or a tree."
    ]
   },
   {
@@ -891,7 +882,8 @@
     "\n",
     "In the next picture (picture 12) as the cyclist has moved down our field of view (now in the region [x = 15 to 20, y = 30 to 70] notice how the \"blob\" of uncertainity gets brighter and seems to have moved not only in the x direction but also adjusted itself in the y direction. As the cyclist moved the blob of uncertainty seems to have followed.\n",
     "\n",
-    "Finally, in the last set of images the cyclist is almost gone from our field of view, but his new region is still that of high unceratinty as he moves through the frame so does our uncertainty \"blob\"."
+    "Finally, in the last set of images the cyclist is almost gone from our field of view, but his new region is still that of high unceratinty as he moves through the frame so does our uncertainty \"blob\".\n",
+    "\n"
    ]
   },
   {
@@ -1003,7 +995,7 @@
     }
    },
    "source": [
-    "## 4. REFERENCES"
+    "## 4.  CHALLENGES AND LIMITATIONS"
    ]
   },
   {
@@ -1013,6 +1005,36 @@
      "id": "e4c5ff23-25fc-476e-97af-fa1089319868"
     }
    },
+   "source": [
+    "We met many challenges during the developement of this project. Mainly surrounding inference, we experimented with different inference algorithms including SGLD and KLQP. We also tried different priors distributions such as standard Normals, Normals with higher variance, etc. but nothing worked quite as well as the Student-T. There are also some limitations as mentioned briefly before, the inability for the model to find proper segmentation for cyclists/pedestrians is a huge drawback. Although we can say that the model is always highly unsure of a region containing a cyclist/pedestrian, without a good guess for what's actually in the region the model is far from production ready. We present below an example that highlights more clearly where our model falls short\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](img/challenges_2.PNG)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this set of photos two cyclist and a car are directly in our field of view. While the segmentation (top center) is able to pick out the buildings,sidewalk,road, and car with high level of cretainty it starts to blend together and even has some black (meaning it does not have a classification) for that space where the pedestrians are. Also on the side of the image where there is another cyclist is labeled in the true segmentation our model shows black and blending once again. Thankfully, both areas are classified by a high level of uncertainty but the limitations of our model in classifying cylcists/pedestrians are definitely there"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 5. REFERENCES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Badrinarayanan, V., Kendall, A., & Cipolla, R. (2015). Segnet: A deep convolutional encoder-\n",
     "decoder architecture for image segmentation. CoRR, abs/1511.00561. Retrieved from\n",
@@ -1028,15 +1050,6 @@
     "Brostow, G. J., Shotton, J., Fauqueur, J., & Cipolla, R. (2008). Segmentation and recognition\n",
     "using structure from motion point clouds. In Eccv (1) (p. 44-57)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1056,7 +1069,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   },
   "nbpresent": {
    "slides": {},
