Limit column widths to 100 for proper rendering in github

--- a/Bayesian Semantic Segmentation.ipynb
+++ b/Bayesian Semantic Segmentation.ipynb
@@ -275,10 +275,12 @@
     "        image_string = tf.read_file(filenames[0])\n",
     "        image_decoded = tf.image.decode_png(image_string, channels=3)\n",
     "        image_decoded = tf.image.convert_image_dtype(image_decoded,tf.float32)\n",
-    "        image_decoded = tf.image.resize_images(image_decoded, [IMAGE_HEIGHT, IMAGE_WIDTH])\n",
+    "        image_decoded = tf.image.resize_images(image_decoded,\n",
+    "                                               [IMAGE_HEIGHT, IMAGE_WIDTH])\n",
     "        annot_string = tf.read_file(filenames[1])\n",
     "        annot_decoded = tf.image.decode_png(annot_string, channels=1)\n",
-    "        annot_decoded = tf.image.resize_images(annot_decoded, [IMAGE_HEIGHT,IMAGE_WIDTH])\n",
+    "        annot_decoded = tf.image.resize_images(annot_decoded,\n",
+    "                                               [IMAGE_HEIGHT,IMAGE_WIDTH])\n",
     "        annot_decoded = tf.squeeze(annot_decoded,axis=2)\n",
     "        annot_decoded = tf.cast(annot_decoded, tf.int64)\n",
     "        return image_decoded, annot_decoded\n",
@@ -425,7 +427,8 @@
    },
    "outputs": [],
    "source": [
-    "inputs = tf.placeholder(tf.float32, [TRAIN_BATCH_SIZE, IMAGE_HEIGHT, IMAGE_WIDTH, IMAGE_DEPTH ])\n",
+    "inputs = tf.placeholder(tf.float32, [TRAIN_BATCH_SIZE, IMAGE_HEIGHT,\n",
+    "                                     IMAGE_WIDTH, IMAGE_DEPTH ])\n",
     "labels = tf.placeholder(tf.int32,[TRAIN_BATCH_SIZE, IMAGE_HEIGHT, IMAGE_WIDTH])\n",
     "is_training = tf.placeholder(tf.bool)"
    ]
@@ -601,7 +604,8 @@
    },
    "outputs": [],
    "source": [
-    "def inference(predicted_mask, latent_dict, labels, n_epoch=225,session_dir='tmp/inference',restore_sess=False):\n",
+    "def inference(predicted_mask, latent_dict, labels, n_epoch=225,\n",
+    "              session_dir='tmp/inference',restore_sess=False):\n",
     "    \n",
     "    N = NUM_TRAIN\n",
     "    M = TRAIN_BATCH_SIZE\n",
@@ -614,7 +618,8 @@
     "        return\n",
     "    else:\n",
     "        inference = ed.KLqp(latent_dict, data={predicted_mask: labels})\n",
-    "        inference.initialize(n_iter=n_batch*n_epoch, n_samples=5, scale={predicted_mask: N/M})\n",
+    "        inference.initialize(n_iter=n_batch*n_epoch, n_samples=5,\n",
+    "                             scale={predicted_mask: N/M})\n",
     "        saver = tf.train.Saver()\n",
     "        sess = ed.get_session()\n",
     "        sess.run(tf.global_variables_initializer())\n",
@@ -703,7 +708,8 @@
     }
    ],
    "source": [
-    "inference(predicted_mask, latent_dict, labels, session_dir='checkpoints/new_checkpoint',restore_sess=False)"
+    "inference(predicted_mask, latent_dict, labels,\n",
+    "          session_dir='checkpoints/new_checkpoint',restore_sess=False)"
    ]
   },
   {
@@ -717,7 +723,7 @@
    },
    "outputs": [],
    "source": [
-    "# inference(predicted_mask, latent_dict, labels, session_dir='checkpoints/checkpoint_final',restore_sess=True)"
+    "# inference(predicted_mask, latent_dict, labels,session_dir='checkpoints/checkpoint_final',restore_sess=True)"
    ]
   },
   {
@@ -830,8 +836,10 @@
    },
    "outputs": [],
    "source": [
-    "def selected_criticism(predicted_mask, latent_dict, data_iterator, num_samples, ppc_nsamples=100,\n",
-    "              plot_one_batch_only = False, plot_random_index_per_batch=False,idx_to_show=[11,12,13]):\n",
+    "def selected_criticism(predicted_mask, latent_dict, data_iterator,\n",
+    "                       num_samples, ppc_nsamples=100,\n",
+    "                       plot_one_batch_only = False,\n",
+    "                       plot_random_index_per_batch=False,idx_to_show=[11,12,13]):\n",
     "    predicted_mask_post = ed.copy(predicted_mask, latent_dict)\n",
     "    predicted_mask_post_samples = predicted_mask_post.sample(ppc_nsamples)\n",
     "    sess = ed.get_session()\n",
@@ -982,8 +990,9 @@
     "# criticism(predicted_mask, latent_dict, test_iterator,NUM_TEST, plot_one_batch_only=True, \n",
     "#          plot_random_index_per_batch=False)\n",
     "\n",
-    "selected_criticism(predicted_mask, latent_dict, test_iterator,NUM_TEST, plot_one_batch_only=True, \n",
-    "          plot_random_index_per_batch=False,idx_to_show=[11,12,13])\n"
+    "selected_criticism(predicted_mask, latent_dict, test_iterator,NUM_TEST,\n",
+    "                   plot_one_batch_only=True,\n",
+    "                   plot_random_index_per_batch=False,idx_to_show=[11,12,13])\n"
    ]
   },
   {
@@ -1069,7 +1078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   },
   "nbpresent": {
    "slides": {},
