Update description for few sections

--- a/Bayesian Semantic Segmentation.ipynb
+++ b/Bayesian Semantic Segmentation.ipynb
@@ -72,9 +72,9 @@
     }
    },
    "source": [
-    "####  a) Need for proper output Uncertainity\n",
+    "####  a) Need for clear prediction Uncertainity\n",
     "\n",
-    "MLE estimates combined with Softmax class probabilties do not represent true uncertainity and typically are overconfident of the predictions   (e.g. see Figure 1)\n"
+    "MLE estimates combined with Softmax class probabilties do not represent true uncertainity and typically are overconfident of the predictions   (e.g. see Figure 1 for a real world example of pitfalls of overconfident predictions)\n"
    ]
   },
   {
@@ -87,6 +87,14 @@
    "source": [
     "![title1](img/crash.jpg)\n",
     "#### Figure 1.                Tesla  Model S Crash (May 2016) - Perception System confused a white trailer for sky"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From Tesla (June 30, 2016)\n",
+    ">  _vehicle was on a divided highway with Autopilot engaged when a tractor trailer drove across the highway perpendicular to the Model S. __Neither Autopilot nor the driver noticed the white side of the tractor trailer against a brightly lit sky, so the brake was not applied__. The high ride height of the trailer combined with its positioning across the road and the extremely rare circumstances of the impact caused the Model S to pass under the trailer, with the bottom of the trailer impacting the windshield of the Model S_"
    ]
   },
   {
@@ -124,7 +132,18 @@
    "source": [
     "#### c) Need for probability calibration\n",
     "\n",
-    "For machine learning systems, output of one model needs to be fed to another model. This requires proper calibration of estimates together with associated uncertainity\n"
+    "For machine learning systems, output of one model needs to be fed to another model. This requires proper calibration of estimates together with associated uncertainity. Car sensor fusion systems combine data from different sensors and modules and when these information is combined, proper claibration is required\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "d) "
    ]
   },
   {
@@ -1057,8 +1076,23 @@
     "high-definition ground truth database. Pattern Recognition Letters.\n",
     "\n",
     "Brostow, G. J., Shotton, J., Fauqueur, J., & Cipolla, R. (2008). Segmentation and recognition\n",
-    "using structure from motion point clouds. In Eccv (1) (p. 44-57)."
+    "using structure from motion point clouds. In Eccv (1) (p. 44-57).\n",
+    "\n",
+    "Tesla Crash:\n",
+    "\n",
+    "https://www.tesla.com/blog/tragic-loss\n",
+    "\n",
+    "https://static.nhtsa.gov/odi/inv/2016/INCLA-PE16007-7876.PDF"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
