Update description for few sections

--- a/Bayesian Semantic Segmentation.ipynb
+++ b/Bayesian Semantic Segmentation.ipynb
@@ -136,14 +136,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "d) "
+    "#### d) Dealing with class diversity and imbalances\n",
+    "Segmentation tasks deals with huge class imbalances within image with Sky & Road labels occuring 50-300 times more frequently than pedestrian/bikes. Neural networks learn to ignore the smaller classes (various techniques can be used to remedy class imbalance with enough training examples but the problem remains)"
    ]
   },
   {
