Add section on concurrent research

--- a/Bayesian Semantic Segmentation.ipynb
+++ b/Bayesian Semantic Segmentation.ipynb
@@ -159,6 +159,17 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prior & Current Research\n",
+    "\n",
+    "Alex Kendall & Yarin Gal (Cambridge) are the pioneers of Bayesian approach to segmentation (see references) with publications on this since 2016. Their approach is different and they use a technique called Dropout Variational Inference which formulates Dropout technique in Neural Networks (where some neurons are turned off at random) as a form of Bayesian approximation and obtain posterior predictions by not turning off dropout at test time (in NNs, the dropout predictions are averaged to obtain a MLE estimate). They rigorously establish the link between Dropout & Gaussian processes. This helps them leverage the existing NN framework to obtain posterior uncertainity cheaply (no need for VI/MCMC etc)\n",
+    "\n",
+    "Our approach is to retain control over modelling and perform a full Bayesian inference with Stochastic VI. This is computationally expensive but gives us more modelling power"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "nbpresent": {
      "id": "0d2e912a-814e-4049-abc9-ad25ad0040ae"
@@ -186,7 +197,7 @@
     "Lower number of training examples and low resolution b) There is high class imbalance between\n",
     "categories and low frequency classes are most important for detection tasks (e.g pedestrians\n",
     "occur 340 times less frequently compared to sky/building) c) There is lot of prior information\n",
-    "structure that can be incorporated in to a Bayesian model"
+    "structure that can be incorporated in to a Bayesian model d) We can perform interesting criticism on the model and inference"
    ]
   },
   {
