--- a/Bayesian Semantic Segmentation.ipynb
+++ b/Bayesian Semantic Segmentation.ipynb
@@ -1042,7 +1042,7 @@
     }
    },
    "source": [
-    "We met many challenges during the developement of this project. Mainly surrounding inference, we experimented with different inference algorithms including SGLD and KLQP. We also tried different priors distributions such as standard Normals, Normals with higher variance, etc. but nothing worked quite as well as the Student-T. There are also some limitations as mentioned briefly before, the inability for the model to find proper segmentation for cyclists/pedestrians is a huge drawback. Although we can say that the model is always highly unsure of a region containing a cyclist/pedestrian, without a good guess for what's actually in the region the model is far from production ready. We present below an example that highlights more clearly where our model falls short\n"
+    "We met many challenges during the developement of this project. Mainly surrounding inference, we experimented with different inference algorithms including SGLD and KLQP. We also tried different priors distributions such as standard Normals, Normals with higher variance, etc. but nothing worked quite as well as the Student-T. There are also some limitations as mentioned briefly before, the inability for the model to find proper segmentation for cyclists/pedestrians is a huge drawback. Although we can say that the model is always highly unsure of a region containing a cyclist/pedestrian, without a good guess for what's actually in the region the model is far from production ready. We present below an example that highlights more clearly where our model falls short.\n"
    ]
   },
   {
