--- a/Bayesian Semantic Segmentation.ipynb
+++ b/Bayesian Semantic Segmentation.ipynb
@@ -72,9 +72,9 @@
     }
    },
    "source": [
-    "####  a) Need for clear prediction Uncertainity\n",
+    "####  a) Need for clear prediction Uncertainty\n",
     "\n",
-    "MLE estimates combined with Softmax class probabilties do not represent true uncertainity and typically are overconfident of the predictions   (e.g. see Figure 1 for a real world example of pitfalls of overconfident predictions)\n"
+    "MLE estimates combined with Softmax class probabilities do not represent true uncertainty and typically are overconfident of the predictions   (e.g. see Figure 1 for a real world example of pitfalls of overconfident predictions)\n"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "source": [
     "#### b) Handling Out of train distribution\n",
     "\n",
-    "MLE Estimates perform very poorly if the test distribution differs a lot from training distribution. This raises concerns with how automated system will perform as there is no gurantee that a test sample will be close to training distribution (see Figure 2)\n"
+    "MLE Estimates perform very poorly if the test distribution differs a lot from training distribution. This raises concerns with how automated system will perform as there is no guarantee that a test sample will be close to training distribution (see Figure 2)\n"
    ]
   },
   {
@@ -132,7 +132,7 @@
    "source": [
     "#### c) Need for probability calibration\n",
     "\n",
-    "For machine learning systems, output of one model needs to be fed to another model. This requires proper calibration of estimates together with associated uncertainity. Car sensor fusion systems combine data from different sensors and modules and when these information is combined, proper claibration is required\n"
+    "For machine learning systems, output of one model needs to be fed to another model. This requires proper calibration of estimates together with associated uncertainty. Car sensor fusion systems combine data from different sensors and modules and when these information is combined, proper calibration is required\n"
    ]
   },
   {
@@ -140,7 +140,7 @@
    "metadata": {},
    "source": [
     "#### d) Dealing with class diversity and imbalances\n",
-    "Segmentation tasks deals with huge class imbalances within image with Sky & Road labels occuring 50-300 times more frequently than pedestrian/bikes. Neural networks learn to ignore the smaller classes (various techniques can be used to remedy class imbalance with enough training examples but the problem remains)"
+    "Segmentation tasks deals with huge class imbalances within image with Sky & Road labels occurring 50-300 times more frequently than pedestrian/bikes. Neural networks learn to ignore the smaller classes (various techniques can be used to remedy class imbalance with enough training examples but the problem remains)"
    ]
   },
   {
@@ -165,7 +165,7 @@
     "\n",
     "Alex Kendall & Yarin Gal (Cambridge) are the pioneers of Bayesian approach to segmentation (see references) with publications on this since 2016. Their approach is different and they use a technique called Dropout Variational Inference which formulates Dropout technique in Neural Networks (where some neurons are turned off at random) as a form of Bayesian approximation and obtain posterior predictions by not turning off dropout at test time (in NNs, the dropout predictions are averaged to obtain a MLE estimate). They rigorously establish the link between Dropout & Gaussian processes. This helps them leverage the existing NN framework to obtain posterior uncertainity cheaply (no need for VI/MCMC etc)\n",
     "\n",
-    "Our approach is to retain control over modelling and perform a full Bayesian inference with Stochastic VI. This is computationally expensive but gives us more modelling power"
+    "Our approach is to retain control over modeling and perform a full Bayesian inference with Stochastic VI. This is computationally expensive but gives us more modeling power"
    ]
   },
   {
@@ -375,9 +375,9 @@
    "source": [
     "Differing from the Dropout VI approach that formulates Dropout layers as a form of Bayesian\n",
     "approximation (Badrinarayanan et al., 2016), our approach is to cycle through Box’s loop to\n",
-    "develop models that are less prone to overfitting, incorporate prior information, deal with class\n",
+    "develop models that are less prone to over-fitting, incorporate prior information, deal with class\n",
     "imbalance and produce well calibrated predictions and model uncertainty. Inference though\n",
-    "stochastic methods will be interesting as we encounter convergence issues and hyperparameter\n",
+    "stochastic methods will be interesting as we encounter convergence issues and hyper-parameter\n",
     "tuning. Criticism is the most interesting part of our analysis for a computer vision task as we as\n",
     "humans can easily judge whether the prediction uncertainties make sense."
    ]
@@ -586,7 +586,7 @@
     "collapsed": true
    },
    "source": [
-    "Our inference procedure uses BBVI to approximate the posterior distribution of the latent parameters, namely the weights and biases on the convolutional layers. The actual procedure is the following:\n",
+    "Our inference procedure uses Stochastic VI to approximate the posterior distribution of the latent parameters, namely the weights and biases on the convolutional layers. The actual procedure is the following:\n",
     "\n",
     "    1. In edward, create a KLQP object using the latent variables. Provide number of iters, number of latent variable samples, and scale the samples by N/M so it's as if the algorithm sees N/M training examples per iteration. N is the Number of Training Examples, M is the Batch Size. \n",
     "    2. Initialize all edward/tf variables including tf iterators\n",
@@ -779,11 +779,11 @@
     "    1.) The top left image is the actual image which is reduced down from it's original size to 72x96x3\n",
     "    2.) The top center image is our segmentation \n",
     "    3.) The top right image is the true segmentation\n",
-    "    4.) The bottom image is our uncertainity heatmap \n",
+    "    4.) The bottom image is our uncertainty heatmap \n",
     "\n",
-    "As we can see from this example our model (top center) fails to predict the cyclist which can be seen in the original image and in the true segmentation (top right) as the light blue outline. However one thing to note is that the region containing the cyclist in the true segmentation, around 15-20 on the x-axis and 30-70 on the y-axis, has a high level of uncertainity in our heatmap. Meaning that our model is quite unsure about that region in particular and is quantifying its uncertainity which is exactly what we want.\n",
+    "As we can see from this example our model (top center) fails to predict the cyclist which can be seen in the original image and in the true segmentation (top right) as the light blue outline. However one thing to note is that the region containing the cyclist in the true segmentation, around 15-20 on the x-axis and 30-70 on the y-axis, has a high level of uncertainty in our heatmap. Meaning that our model is quite unsure about that region in particular and is quantifying its uncertainty which is exactly what we want.\n",
     "\n",
-    "Another noteworthy finding is that in the true segmentation  around 75 on the x-axis and 20 on the y-axis we have a tree in front of a building. In the labeled true segementation there is some arbitrary distinction between where the tree ends and the building begins with the labeler just marking the whole area as a tree. In our segmentation there is a blending of sorts between the two as if you look in the original image it's possible to see both the tree and the bulding at the same time. Lastly, the uncertainity heat map in that region we have high levels of uncertainity as it's unsure of whether to classify it as a building or a tree."
+    "Another noteworthy finding is that in the true segmentation  around 75 on the x-axis and 20 on the y-axis we have a tree in front of a building. In the labeled true segementation there is some arbitrary distinction between where the tree ends and the building begins with the labeler just marking the whole area as a tree. In our segmentation there is a blending of sorts between the two as if you look in the original image it's possible to see both the tree and the building at the same time. Lastly, the uncertainty heat map in that region we have high levels of uncertainty as it's unsure of whether to classify it as a building or a tree."
    ]
   },
   {
