--- a/Bayesian Semantic Segmentation.ipynb
+++ b/Bayesian Semantic Segmentation.ipynb
@@ -586,7 +586,12 @@
     "collapsed": true
    },
    "source": [
-    "Our inference procedure uses Stochastic VI to approximate the posterior distribution of the latent parameters, namely the weights and biases on the convolutional layers. The actual procedure is the following:\n",
+    "Our inference procedure uses Stochastic VI to approximate the posterior distribution of the latent parameters, namely the weights and biases on the convolutional layers. The approximating distribution for the convolutional weights will be a normal distribution\n",
+    "\n",
+    "$$ q(w;\\lambda) \\sim Normal(\\mu,\\sigma^2)$$\n",
+    "\n",
+    "\n",
+    "The actual procedure is the following:\n",
     "\n",
     "    1. In edward, create a KLQP object using the latent variables. Provide number of iters, number of latent variable samples, and scale the samples by N/M so it's as if the algorithm sees N/M training examples per iteration. N is the Number of Training Examples, M is the Batch Size. \n",
     "    2. Initialize all edward/tf variables including tf iterators\n",
@@ -700,11 +705,6 @@
    "source": [
     "latent_dict"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -913,11 +913,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here's we extend the example of a to a frame before and after the image we just discussed. In the firt set of images (picture 11) The cyclist is right beside the car as you can see from the original image and true segmentation in the region [x = 0 to 5,y = 20 to 70]. Our model fails to find the cyclist but instead blends the surroundings i.e. it says this region has some blend of trees at the top, buildings in the middle, and road/sidewalk at the bottom. However, thanks to our models ability to quantify uncertainty we can see that in this region it is quite uncertain about what is there. \n",
+    "Here's we extend the example of a to a frame before and after the image we just discussed. In the first set of images (picture 11) The cyclist is right beside the car as you can see from the original image and true segmentation in the region [x = 0 to 5,y = 20 to 70]. Our model fails to find the cyclist but instead blends the surroundings i.e. it says this region has some blend of trees at the top, buildings in the middle, and road/sidewalk at the bottom. However, thanks to our models ability to quantify uncertainty we can see that in this region it is quite uncertain about what is there. \n",
     "\n",
-    "In the next picture (picture 12) as the cyclist has moved down our field of view (now in the region [x = 15 to 20, y = 30 to 70] notice how the \"blob\" of uncertainity gets brighter and seems to have moved not only in the x direction but also adjusted itself in the y direction. As the cyclist moved the blob of uncertainty seems to have followed.\n",
+    "In the next picture (picture 12) as the cyclist has moved down our field of view (now in the region [x = 15 to 20, y = 30 to 70] notice how the \"blob\" of uncertainty gets brighter and seems to have moved not only in the x direction but also adjusted itself in the y direction. As the cyclist moved the blob of uncertainty seems to have followed.\n",
     "\n",
-    "Finally, in the last set of images the cyclist is almost gone from our field of view, but his new region is still that of high unceratinty as he moves through the frame so does our uncertainty \"blob\".\n",
+    "Finally, in the last set of images the cyclist is almost gone from our field of view, but his new region is still that of high uncertainty as he moves through the frame so does our uncertainty \"blob\".\n",
     "\n"
    ]
   },
@@ -1042,7 +1042,7 @@
     }
    },
    "source": [
-    "We met many challenges during the developement of this project. Mainly surrounding inference, we experimented with different inference algorithms including SGLD and KLQP. We also tried different priors distributions such as standard Normals, Normals with higher variance, etc. but nothing worked quite as well as the Student-T. There are also some limitations as mentioned briefly before, the inability for the model to find proper segmentation for cyclists/pedestrians is a huge drawback. Although we can say that the model is always highly unsure of a region containing a cyclist/pedestrian, without a good guess for what's actually in the region the model is far from production ready. We present below an example that highlights more clearly where our model falls short.\n"
+    "We met many challenges during the development of this project. Mainly surrounding inference, we experimented with different inference algorithms including SGLD and KLQP. We also tried different priors distributions such as standard Normals, Normals with higher variance, etc. but nothing worked quite as well as the Student-T. There are also some limitations as mentioned briefly before, the inability for the model to find proper segmentation for cyclists/pedestrians is a huge drawback. Although we can say that the model is always highly unsure of a region containing a cyclist/pedestrian, without a good guess for what's actually in the region the model is far from production ready. We present below an example that highlights more clearly where our model falls short.\n"
    ]
   },
   {
@@ -1056,7 +1056,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this set of photos two cyclist and a car are directly in our field of view. While the segmentation (top center) is able to pick out the buildings,sidewalk,road, and car with high level of cretainty it starts to blend together and even has some black (meaning it does not have a classification) for that space where the pedestrians are. Also on the side of the image where there is another cyclist is labeled in the true segmentation our model shows black and blending once again. Thankfully, both areas are classified by a high level of uncertainty but the limitations of our model in classifying cylcists/pedestrians are definitely there"
+    "In this set of photos two cyclist and a car are directly in our field of view. While the segmentation (top center) is able to pick out the buildings,sidewalk,road, and car with high level of certainty it starts to blend together and even has some black (meaning it does not have a classification) for that space where the pedestrians are. Also on the side of the image where there is another cyclist is labeled in the true segmentation our model shows black and blending once again. Thankfully, both areas are classified by a high level of uncertainty but the limitations of our model in classifying cyclists/pedestrians are definitely there"
    ]
   },
   {
