--- a/Bayesian Semantic Segmentation.ipynb
+++ b/Bayesian Semantic Segmentation.ipynb
@@ -13,13 +13,33 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TABLE OF CONTENTS\n",
+    "\n",
+    "1. [Introduction](#introduction)\n",
+    "2. [Need for Bayesian Approach](#bayes)\n",
+    "\n",
+    "  2.1 [Need for prediction uncertainty](#bayes1)\n",
+    "  \n",
+    "  2.2 [Handling \"out of train distribution\"](#bayes2)\n",
+    "  \n",
+    "  2.3 [Need for probability calibration ](#bayes3)\n",
+    "  \n",
+    "  2.4 [Dealing with class diversity and imbalances](#bayes4)\n",
+    "3. [Box's Loop for Bayesian Segmentation](#box)\n",
+    "4. [Prior & Current Research](#research)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "nbpresent": {
      "id": "1032430e-6ee8-4162-a6d7-d981147c2b54"
     }
    },
    "source": [
-    "## 1. Introduction"
+    "## 1. Introduction <a class=\"anchor\" id=\"introduction\"></a>"
    ]
   },
   {
@@ -61,7 +81,7 @@
     }
    },
    "source": [
-    "## 2. Need for Bayesian Approach "
+    "## 2. Need for Bayesian Approach <a class=\"anchor\" id=\"bayes\"></a>"
    ]
   },
   {
@@ -72,7 +92,7 @@
     }
    },
    "source": [
-    "###  2.1 Need for clear prediction Uncertainty\n",
+    "###  2.1 Need for clear prediction Uncertainty <a class=\"anchor\" id=\"bayes1\"></a>\n",
     "\n",
     "MLE estimates combined with Softmax class probabilities do not represent true uncertainty and typically are overconfident of the predictions   (e.g. see Figure 1 for a real world example of pitfalls of overconfident predictions)\n"
    ]
@@ -105,7 +125,7 @@
     }
    },
    "source": [
-    "### 2.2 Handling Out of train distribution\n",
+    "### 2.2 Handling \"out of train distribution\" <a class=\"anchor\" id=\"bayes2\"></a>\n",
     "\n",
     "MLE Estimates perform very poorly if the test distribution differs a lot from training distribution. This raises concerns with how automated system will perform as there is no guarantee that a test sample will be close to training distribution (see Figure 2)\n"
    ]
@@ -130,7 +150,7 @@
     }
    },
    "source": [
-    "### 2.3 Need for probability calibration\n",
+    "### 2.3 Need for probability calibration <a class=\"anchor\" id=\"bayes3\"></a>\n",
     "\n",
     "For machine learning systems, output of one model needs to be fed to another model. This requires proper calibration of estimates together with associated uncertainty. Car sensor fusion systems combine data from different sensors and modules and when these information is combined, proper calibration is required\n"
    ]
@@ -139,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4 Dealing with class diversity and imbalances\n",
+    "### 2.4 Dealing with class diversity and imbalances <a class=\"anchor\" id=\"bayes4\"></a>\n",
     "Segmentation tasks deals with huge class imbalances within image with Sky & Road labels occurring 50-300 times more frequently than pedestrian/bikes. Neural networks learn to ignore the smaller classes (various techniques can be used to remedy class imbalance with enough training examples but the problem remains)"
    ]
   },
@@ -147,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Box's Loop for Bayesian Segmentation"
+    "## 3. Box's Loop for Bayesian Segmentation <a class=\"anchor\" id=\"box\"></a>"
    ]
   },
   {
@@ -161,9 +181,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Prior & Current Research\n",
+    "## 4. Prior & Current Research<a class=\"anchor\" id=\"research\"></a>\n",
     "\n",
-    "Alex Kendall & Yarin Gal (Cambridge) are the pioneers of Bayesian approach to segmentation (see references) with publications on this since 2016. Their approach is different and they use a technique called Dropout Variational Inference which formulates Dropout technique in Neural Networks (where some neurons are turned off at random) as a form of Bayesian approximation and obtain posterior predictions by not turning off dropout at test time (in NNs, the dropout predictions are averaged to obtain a MLE estimate). They rigorously establish the link between Dropout & Gaussian processes. This helps them leverage the existing NN framework to obtain posterior uncertainity cheaply (no need for VI/MCMC etc)\n",
+    "Alex Kendall & Yarin Gal (Cambridge) are the pioneers of Bayesian approach to segmentation (see references) with publications on this since 2016. Their approach is different and they use a technique called Dropout Variational Inference which formulates Dropout technique in Neural Networks (where some neurons are turned off at random) as a form of Bayesian approximation and obtain posterior predictions by not turning off dropout at test time (in NNs, the dropout predictions are averaged to obtain a MLE estimate). They rigorously establish the link between Dropout & Gaussian processes. This helps them leverage the existing NN framework to obtain posterior uncertainty cheaply (no need for VI/MCMC etc)\n",
     "\n",
     "Our approach is to retain control over modeling and perform a full Bayesian inference with Stochastic VI. This is computationally expensive but gives us more modeling power"
    ]
@@ -176,7 +196,7 @@
     }
    },
    "source": [
-    "## 5. DATA"
+    "## 5. DATA<a class=\"anchor\" id=\"data\"></a>"
    ]
   },
   {
@@ -351,7 +371,7 @@
     }
    },
    "source": [
-    "## 6. MODEL"
+    "## 6. MODEL<a class=\"anchor\" id=\"model\"></a>"
    ]
   },
   {
@@ -375,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.1 Bayesian Segmentation Model\n",
+    "### 6.1 Bayesian Segmentation Model<a class=\"anchor\" id=\"model1\"></a>\n",
     "\n",
     "Consider dataset of images and associated segment $\\{(x_i, y_i)\\}$ where $x_i \\in \\mathbb{R}^{72*96*3}$ and $y_i \\in \\{0,1,2..11\\}^{72*96}$. $x_i$ is a 3 channel RGB image of dimensions 72x96x3 while $y_i$ is an integer bewteen 0 and 11 denoting the pixel wise class labels of dimensions 72x96\n",
     "\n",
@@ -566,7 +586,7 @@
     }
    },
    "source": [
-    "## 7. INFERENCE"
+    "## 7. INFERENCE<a class=\"anchor\" id=\"inference\"></a>"
    ]
   },
   {
@@ -750,7 +770,7 @@
     }
    },
    "source": [
-    "## 8. CRITICISM"
+    "## 8. CRITICISM<a class=\"anchor\" id=\"criticism\"></a>"
    ]
   },
   {
@@ -1020,7 +1040,7 @@
     }
    },
    "source": [
-    "## 9.  CHALLENGES AND LIMITATIONS"
+    "## 9.  CHALLENGES AND LIMITATIONS<a class=\"anchor\" id=\"challenges\"></a>"
    ]
   },
   {
@@ -1054,7 +1074,7 @@
     "collapsed": true
    },
    "source": [
-    "## 10. REFERENCES"
+    "## 10. REFERENCES<a class=\"anchor\" id=\"references\"></a>"
    ]
   },
   {
