--- a/Bayesian Semantic Segmentation.ipynb
+++ b/Bayesian Semantic Segmentation.ipynb
@@ -28,7 +28,13 @@
     "  \n",
     "  2.4 [Dealing with class diversity and imbalances](#bayes4)\n",
     "3. [Box's Loop for Bayesian Segmentation](#box)\n",
-    "4. [Prior & Current Research](#research)\n"
+    "4. [Prior & Current Research](#research)\n",
+    "5. [Data](#data)\n",
+    "6. [Model](#data)\n",
+    "7. [Inference](#inference)\n",
+    "8. [Criticism](#criticism)\n",
+    "9. [Challenges and Limitations](#challenges)\n",
+    "10. [References](#references)\n"
    ]
   },
   {
